<resources>
    <string name="app_name">Reservator</string>
    <string name="permission_dialog_positive">OK</string>
    <string name="permission_dialog_negative">Cancel</string>
    <string name="dialog_calendar_permission_massage">This app needs access to calendar to work, please enable it in the permission settings.</string>
    <string name="dialog_calendar_permission_title">Calendar permission required</string>
    <string name="dialog_accounts_permission_massage">This app needs access to account data, please enable it in the permission settings.</string>
    <string name="dialog_accounts_permission_title">Accounts permission required</string>
    <string name="dialog_sync_settings_permission_massage">This app needs access to sync settings, please enable it in the permission settings.</string>
    <string name="dialog_sync_settings_permission_title">Sync settings permission required</string>
    <string name="dialog_contacts_permission_massage">This app needs access to contact data to work, please enable it in the permission settings.</string>
    <string name="dialog_contacts_permission_title">Contact permission required</string>
    <string name="login">Login</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="exchange_username">Exchange username:</string>
    <string name="exchange_password">Exchange password:</string>
    <string name="calendarOk">Calendar OK</string>
    <string name="calendarPending">Calendar pending…</string>
    <string name="contactsOk">Contacts OK</string>
    <string name="contactsPending">Contacts pending…</string>
    <string name="fum_username">FUM3 username:</string>
    <string name="fum_password">FUM3 password:</string>
    <string name="default_fum_username">roomreservator</string>
    <string name="default_exchange_username">reserve@futurice.com</string>
    <string name="exchange_server_address">Exchange server address</string>
    <string name="calendarError">Calendar error</string>
    <string name="noCalendarsError">No meeting room calendars found. Please ensure that an Account has been configured on this device and that a Calendar has been set to sync the meeting room calendars.</string>
    <string name="loadingText">Loading</string>
    <string name="selectAccount">Select Account</string>
    <string name="accountForServation">reservationAccount</string>
    <string name="selectMode">Select Mode for Calendar</string>
    <string name="resourcesMode">Resources</string>
    <string name="calendarMode">Calendars</string>
    <string name="lobbyRoomName">Lobby</string>
    <string name="refresh">Refresh</string>
    <string name="refreshRoomList">Refreshing room list…</string>
    <string name="setting">Settings</string>
    <string name="aboutTitle">About</string>
    <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin and London. More information at: www.futurice.com.\n\nThis application is published under the BSD license. You can find the source code at: http://github.com/futurice/meeting-room-tablet</string>
    <string name="hintText">Hint: You can use your tablet\'s address book contacts for reserving.</string>
    <string name="book_now">Book now</string>
    <string name="faildUser">No such user, try again</string>
    <string name="faildCheckSettings">No account for reservation stored. Check your settings.</string>
    <string name="reservation_alternativ_infoLabel">Please select the time you want to change.</string>
    <string name="language">Language:</string>
    <string name="language_De">german</string>
    <string name="language_En">english</string>
    <string name="PREFERENCES_NAME">ReservatorPreferences</string>
    <string name="PREFERENCES_SERVER_ADDRESS">serverAddress</string>
    <string name="PREFERENCES_ROOM_NAME">roomName</string>
    <string name="PREFERENCES_USERNAME">username</string>
    <string name="PREFERENCES_PASSWORD">password</string>
    <string name="PREFERENCES_FUM_USERNAME">fumUsername</string>
    <string name="PREFERENCES_FUM_PASSWORD">fumPassword</string>
    <string name="PREFERENCES_UNSELECTED_ROOMS">unselectedRooms</string>
    <string name="PREFERENCES_ACCOUNT">calendarAccount</string>
    <string name="PREFERENCES_ACCOUNT_TYPE">accountType</string>
    <string name="PREFERENCES_LANGUAGE">language</string>
    <string name="PREFERENCES_FILTER_ROOM_NAME_FROM_ATTENDEES">filterRoomNameFromAttendees</string>
    <string name="PREFERENCES_CALENDAR_MODE">calendarMode</string>
    <string name="removeUserData">Remove login info and reset settings</string>
    <string name="settings_Default_Account_For_Reservation">Select account for reserving</string>
    <string name="settingsReset">Removed credentials and reseted settings</string>
    <string name="settingsSaved">Settings saved</string>
    <string name="addressBookHelpText">If this option is enabled, reserving with the tablet requires entering a valid name that is synced to the accounts address book contacts.</string>
    <string name="alternativeRoomNamesHelpText">If this option is enabled, attendee names will be used as room names.</string>
    <string name="accountHelp">Account or accounts used for searching rooms.</string>
    <string name="addressBookOptionLabel">Require address book contacts for reserving</string>
    <string name="alternativeRoomNamesOptionLabel">Use attendee name as room name</string>
    <string name="continueBtn">Continue</string>
    <string name="doNotModify">Do not modify these settings, go away!</string>
    <string name="onlyItTeamShouldModify">Only IT team should modify these settings.</string>
    <string name="goBackBtn">Go back!</string>
    <string name="room_name">Name of the default room</string>
    <string name="close">Close</string>
    <string name="used_account">Used Account</string>
    <string name="used_mode">Calendar Mode</string>
    <string name="usedModeHelp">The way your rooms are provided</string>
    <string name="allAccountsMagicWord">(All)</string>
    <string name="shown_rooms">Visible rooms</string>
    <string name="reserv_view_alternativ_label">Reservation view</string>
    <string name="reserv_view_spinner_default">reservation view with timespan picker</string>
    <string name="reserv_view_spinner_change">reservation view with different time buttons</string>
    <string name="infoText_reservPopup_select">Tipp: Please tipp the time you want to change</string>
    <string name="meetingTitleLabel">Meeting designation</string>
    <string name="meetingTitlePersonName">is person name who reservated</string>
    <string name="meetingTitleMeetingName">is meeting name</string>
    <string name="oneAccountPerRoom">false</string>
    <string name="refreshRoom">refreshing room info</string>
    <string name="defaultTitleForReservation">Reserved</string>
    <string name="from">From </string>
    <string name="forX">for </string>
    <string name="to">To </string>
    <string name="free">Free </string>
    <string name="freeFor">Free for </string>
    <string name="freeIn">Free in </string>
    <string name="freeAt">Free at </string>
    <string name="freeDay">for the day</string>
    <string name="get_a_room">Get a room!</string>
    <string name="reserve">reserve</string>
    <string name="reservationTextTemplate">Reserved: ^1</string>
    <string name="seeAllRooms">All rooms</string>
    <string name="faildReservation">Failed to put reservation</string>
    <string name="dateLabelFormat">EEEE, MMM. d</string>
    <string name="weekLabelFormat">\'Week\' w</string>
    <string name="visualizer">Drew CalendarVisualizer in </string>
    <string name="visualizerTime">Calendar visualizer touched time: </string>
    <string name="timeSpan">timespan: </string>
    <string name="reservationDone">Set reservations done in </string>
    <string name="minutes"> minutes</string>
    <string name="minute"> minute</string>
    <string name="halfHour"> half an hour</string>
    <string name="hour"> an hour</string>
    <string name="threeQuartershour"> 45 minuten</string>
    <string name="hourAndHalf"> an hour and a half</string>
    <string name="hours"> hours</string>
    <string name="day"> day</string>
    <string name="days"> days</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="negativeTime">No negative time allowed</string>
    <string name="negativeTimeMinus">No negative time allowed — </string>
    <string name="negativeTimeCount">No negative time allowed — count: </string>
    <string name="negativeTimeStart">No negative time allowed — setStart</string>
    <string name="negativeTimeEnd">No negative time allowed — setEnd</string>
    <string name="startTimeAfterEndTime">setting startTime after endTime</string>
    <string name="startTimeOutsideMinMax">setting startTime outside of minmax</string>
    <string name="endTimeOutsideMinMax">setting endTime outside of minmax</string>
    <string name="endTimeBeforeStartTime">setting endTime before startTime</string>
    <string name="maximumBeforeMin">setting maximumTime to be before the minimum</string>
    <string name="minumumAfterMax">setting minimumTime to be after the maximum</string>
    <string name="roomDeleted">Room calendar has been deleted</string>
    <string name="parsID">Could not parse reservation ID</string>
    <string name="syncCalRequest">Calendar sync requested on </string>
    <string name="syncCalActiv">Calendar sync was active on</string>
    <string name="syncCalNotSync">Calendar is not syncable on </string>
    <string name="initiateNot">Could not initiate sync on account  </string>
    <string name="infoMeetingName">Please enter a meeting name</string>
    <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
    <string name="touchToReturn">Tap for reservations</string>
    <string name="book">Book room</string>
    <string name="bookNow">Book Now</string>
    <string name="disconnectedWarning">Disconnected!</string>
    <string name="seeRoomTrafficLights">room status</string>
    <string name="resExaptionErrorCancel">It is not possible to cancle this reservation</string>
    <string name="saveSettings">save settings</string>
    <string name="calendarInfo">Tipp: Tap free time space to reserve</string>
    <string name="ERROR">Error</string>
    <string name="SUCCESS">Reserved</string>
    <string name="SUCCESS_Message">Your reservation was successful.</string>
    <string name="FollowMeeting">next meeting: </string>
    <string name="setRoomFree">unblock room</string>
    <string name="cancelTitle">Cancel reservation</string>
    <string name="navigation_item_status" translatable="false">STATUS</string>
    <string name="navigation_item_agenda" translatable="false">AGENDA</string>
    <string name="navigation_item_all_rooms">ALL ROOMS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_default_room_title">Default Room</string>
    <string name="main_acitivity_settings_button_description">Settings</string>
    <string name="header_title_lobby">All rooms</string>
    <string name="settings_hidden_rooms_title">Rooms to hide</string>
    <string name="settings_languages_title">Display language</string>
    <string name="agenda_title">Agenda for %1$s</string>
    <string name="time_suffix_day">day</string>
    <string name="time_suffix_days">days</string>
    <string name="time_suffix_hour">hour</string>
    <string name="time_suffix_hours">hours</string>
    <string name="time_suffix_minute">minute</string>
    <string name="time_suffix_minutes">minutes</string>
    <string name="book_now_dialog_title">Book now?</string>
    <string name="book_now_dialog_message">Do you want to book this meeting room for 30 minutes starting now?</string>
    <string name="book_now_dialog_confirm">Book now</string>
</resources>