<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="#fff"
        android:padding="10dip">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tippCalenderLabel"
            android:layout_margin="10dp"
            android:fillViewport="true">

            <com.futurice.android.reservator.view.WeekView
                android:id="@+id/weekView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/tippCalenderLabel"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="30dp">

                <FrameLayout
                    android:id="@+id/frameLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="10dp"></FrameLayout>
            </com.futurice.android.reservator.view.WeekView>
        </ScrollView>

        <TextView
            android:id="@+id/roomNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/TextColor"
            android:textIsSelectable="false"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tippCalenderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/roomNameLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/calendarInfo"
            android:textColor="@color/TextInfoColor"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/seeAllRoomsButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/roomNameLabel"
            android:layout_margin="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_background"
            android:text="@string/seeAllRooms"
            android:textColor="#fff" />

        <Button
            android:id="@+id/seeRoomTrafficLightsButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/seeRoomTrafficLights"
            android:textColor="#fff" />
    </RelativeLayout>

    <com.futurice.android.reservator.view.RoomTrafficLights
        android:id="@+id/roomTrafficLights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>
